# waltzes-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  ecosystem.config.js  main.py  package-lock.json  pyproject.toml  requirements.txt  serverless.yml
logs/: app.log.1
models/: user.py  user_linkedin.py
services/: linkedin_scrapper.py  mongodb.py  openai.py  pdf.py  resume_best_match.py  resume_vectorizor.py
src/: local_test.py  poll_cover_letter_creator.py  poll_job_scraper_queue.py  poll_job_structuror_queue.py  poll_linkedin_scraper_queue.py  poll_pdf_creator.py  poll_resume_creator.py  test_handlers.py
src/aws/: s3.py  sqs.py
src/dummy_apis/: job_scraper.json  linkedin_scraper.json
src/handlers/: base_handler.py  process_cover_letter_creator.py  process_job_message.py  process_job_scraper.py  process_job_structuror.py  process_linkedin_message.py  process_linkedin_scraper.py  process_pdf_creator.py  process_resume_creator.py
src/services/llm/: json_schemas.py  langchain.py  openai.py  prompts.py
src/services/pdf/: pdf.py
src/services/scrapers/: job_scraper.py  linkedin_scrapper.py
src/utils/: logger.py  utils.py
utils/: prompts.py  utils.py
